test/trivial/deitz/test_var_decl_strange3.good
Error: Variable 'x' used before defined (test_var_decl_strange3.chpl:1)
